Fix grid spacing

--- a/scss/manager.scss
+++ b/scss/manager.scss
@@ -603,6 +603,11 @@ table {
     }
 }
 
+.linodes h2 {
+    margin-top: 0.2rem;
+    margin-bottom: 0.5rem;
+}
+
 .row:last-of-type > .content-col {
     margin-bottom: 0;
 }
